--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -70,7 +70,23 @@
     <link href="/styles/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
     <link href="/styles/bootstrap-theme.min.css" rel="stylesheet">
-    
+    <style>
+    .has-error .chosen-container .chosen-single{
+			border: 1px solid #a94442;
+		}
+		.has-error .chosen-container .chosen-choices{
+			border: 1px solid #a94442;
+		}
+		.has-error .table-thead-grey>tbody>tr>td, .has-error .table-thead-grey>thead>tr>th {
+		    border: 1px solid #a94442;
+		}
+		.has-error .bootstrap-filestyle label{
+		    border: 1px solid #a94442;
+		}
+		.has-error .bootstrap-filestyle input{
+		    border: 1px solid #a94442;
+		}
+    </style>
     
 	<!-- Angular components -->
 	<!-- build:appcomponents js/appcomponents.js -->
