--- a/src/main/webapp/frontend/index.html
+++ b/src/main/webapp/frontend/index.html
@@ -97,6 +97,7 @@
 	<script type="text/javascript" src="components/directives/main.nav.directive.js"></script>
 	<script type="text/javascript" src="components/directives/responsive.nav.directive.js"></script>
 	<script type="text/javascript" src="components/directives/owl.slider.directive.js"></script>
+    <script src="components/directives/inputemail.directive.js"></script>
     
 	<!-- endbuild -->
 
