--- a/src/main/webapp/frontend/index.html
+++ b/src/main/webapp/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -63,7 +63,7 @@
 	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 	<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 	<script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-	<!-- endbuild -->
+    	<!-- endbuild -->
     <!-- Toaster -->
     
     <!-- Bootstrap core CSS -->
@@ -98,7 +98,7 @@
 	<script type="text/javascript" src="components/directives/responsive.nav.directive.js"></script>
 	<script type="text/javascript" src="components/directives/owl.slider.directive.js"></script>
     <script src="components/directives/inputemail.directive.js"></script>
-    
+    <script src="/frontend/node_modules/angular-ui-mask/dist/mask.js"></script>
 	<!-- endbuild -->
 
 	<!-- Application sections -->
